--- a/TDMail/TDMail.csproj
+++ b/TDMail/TDMail.csproj
@@ -5,11 +5,15 @@
         <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="GlobalHotkeys" Version="1.0.0.6" />
       <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+      <PackageReference Include="MimeKit" Version="4.2.0" />
+      <PackageReference Include="SmorcIRL.TempMail" Version="2.0.1" />
     </ItemGroup>
+
 
 </Project>
