tray implementation started

--- a/TDMail/TDMail.csproj
+++ b/TDMail/TDMail.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net7.0-windows10.0.17763.0</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
@@ -13,6 +14,12 @@
       <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
       <PackageReference Include="MimeKit" Version="4.2.0" />
       <PackageReference Include="SmorcIRL.TempMail" Version="2.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="AppIcon.ico">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 
